problem with product listing

--- a/public/css/tempusStyle.css
+++ b/public/css/tempusStyle.css
@@ -1,5 +1,5 @@
 .signup-container {
-  background: linear-gradient(180deg, #3b5d50  0%, #769489 100%);
+  background-color: linear-gradient(135deg, #f0f4f8, #d9e2ec);
   min-height: 100vh;
   position: relative;
   overflow: hidden;
