--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -56,6 +56,7 @@
                         type="text"
                         class="form-control mb-3"
                         name="categoryName"
+                        id="categoryName"
                         placeholder="Enter category name"
                         required
                       />
@@ -71,6 +72,7 @@
                       <textarea
                         class="form-control mb-3"
                         name="description"
+                        id="description"
                         placeholder="Enter short description"
                         rows="3"
                         required
