--- a/views/partials/admin/sideBar.ejs
+++ b/views/partials/admin/sideBar.ejs
@@ -62,7 +62,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
+            <a href="/admin/profile" class="nav-link-custom">
               <i class="bi bi-person-circle me-2"></i>
               <p class="mb-0 ms-2">My Profile</p>
             </a>
