--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -20,7 +20,7 @@
 									<input type="email" class="form-control" placeholder="Enter your email">
 								</div>
 								<div class="col-auto">
-									<button class="btn btn-primary">
+									<button class="btn btn-dark">
 										<span class="fa fa-paper-plane"></span>
 									</button>
 								</div>
