--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -1,74 +1,82 @@
 <!-- Start Header/Navigation -->
-<nav
-  class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark"
-  arial-label="Furni navigation bar"
->
-  <div class="container">
-    <a class="navbar-brand" href="/">Tempus<span>.</span></a>
+<nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" aria-label="Tempus navigation bar">
+  <div class="container-fluid mx-5 d-flex align-items-center justify-content-between">
+    
+    <!-- Brand -->
+    <a class="navbar-brand order-1" href="/">Tempus<span>.</span></a>
 
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarsFurni"
-      aria-controls="navbarsFurni"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <!-- Mobile toggle -->
+    <button class="navbar-toggler order-2 ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse d-flex align-items-center justify-content-center" id="navbarsFurni">
-      <ul class="custom-navbar-nav navbar-nav justify-content-center w-100">
-        <li><a class="nav-link" href="index.html">New Arrivals</a></li>
-        <li><a class="nav-link" href="shop.html">Men</a></li>
-        <li><a class="nav-link" href="about.html">women</a></li>
-        <li><a class="nav-link" href="services.html">Kids</a></li>
-        <li><a class="nav-link" href="blog.html">Smartwatches</a></li>
-        <li><a class="nav-link" href="contact.html">Luxury</a></li>
-        <li><a class="nav-link" href="contact.html">Offers</a></li>
-      </ul>
+    <!-- Search bar (mobile only, far right) -->
+    <form action="/search" method="GET" class="d-flex d-md-none order-3 ms-2 flex-grow-1" style="max-width: 200px;">
+      <input 
+        type="text" 
+        name="q" 
+        placeholder="Search..." 
+        class="form-control"
+        style="height:30px; padding:4px 8px; font-size:13px; border-radius:4px; background-color:#eff2f1;"
+      >
+    </form>
 
-      <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-        <li>
-          <a class="nav-link" href="cart.html"
-            ><img src="images/icons8-search-22.png"
-          /></a>
-        </li>
-        <li class="nav-item dropdown">
-          <% if (locals.user) { %>
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="userDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
+    <!-- Collapsible content -->
+    <div class="collapse navbar-collapse order-4 w-100" id="navbarsFurni">
+      <div class="d-flex w-100 align-items-center justify-content-between mt-3 mt-md-0">
+        
+        <!-- Left menu -->
+        <ul class="custom-navbar-nav navbar-nav flex-grow-1">
+          <li><a class="nav-link" href="/collections">New Arrivals</a></li>
+          <li><a class="nav-link" href="shop.html">Men</a></li>
+          <li><a class="nav-link" href="about.html">Women</a></li>
+          <li><a class="nav-link" href="services.html">Kids</a></li>
+          <li><a class="nav-link" href="blog.html">Smartwatches</a></li>
+          <li><a class="nav-link" href="contact.html">Luxury</a></li>
+          <li><a class="nav-link" href="contact.html">Offers</a></li>
+        </ul>
+
+        <!-- Search bar (desktop) -->
+        <form action="/collections" method="GET" class="d-none d-md-flex ms-3 me-3 flex-grow-1" style="max-width: 400px;">
+          <input 
+            type="text" 
+            name="search" 
+            placeholder="Search..." 
+            class="form-control"
+            style="height:32px; padding:4px 10px; font-size:14px; border-radius:4px; background-color:#eff2f1;"
           >
-            <%= locals.user.firstName %>
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="userDropdown">
-            <li><a class="dropdown-item" href="/dashboard">Your Account</a></li>
-            <li><a class="dropdown-item" href="/logout">Logout</a></li>
-          </ul>
-          <% } else { %>
-          <a class="nav-link" href="/login">
-            <img src="images/user.svg" alt="User" />
-          </a>
-          <% } %>
-        </li>
+        </form>
 
-        <li>
-          <a class="nav-link" href="/wishlist"
-            ><img src="images/icons8-heart-28.png"
-          /></a>
-        </li>
-        <li>
-          <a class="nav-link" href="cart.html"><img src="images/cart.svg" /></a>
-        </li>
-      </ul>
+        <!-- Right icons -->
+        <ul class="custom-navbar-cta navbar-nav d-flex align-items-center mb-0">
+          <li class="nav-item dropdown">
+            <% if (locals.user) { %>
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <%= locals.user.firstName %>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                <li><a class="dropdown-item" href="/dashboard">Your Account</a></li>
+                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+              </ul>
+            <% } else { %>
+              <a href="/login" class="nav-link">
+                <i class="fa-regular fa-user fa-lg text-white"></i>
+              </a>
+            <% } %>
+          </li>
+          <li class="ms-3">
+            <a href="/wishlist" class="nav-link">
+              <i class="fa-regular fa-heart fa-lg text-white"></i>
+            </a>
+          </li>
+          <li class="ms-3">
+            <a href="/cart" class="nav-link">
+              <i class="fa-solid fa-cart-shopping fa-lg text-white"></i>
+            </a>
+          </li>
+        </ul>
+
+      </div>
     </div>
   </div>
 </nav>
-
-<!-- End Header/Navigation -->
