--- a/views/user/page404.ejs
+++ b/views/user/page404.ejs
@@ -63,20 +63,27 @@
     <script src="js/changeFrgtPswd.js"></script>
     <script src="js/templateJS.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script>
-      // Function to get URL parameters
-      function getQueryParam(param) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(param);
+      const success_msg =
+        "<%= success_msg && success_msg.length > 0 ? success_msg[0] : '' %>";
+      const error_msg =
+        "<%= error_msg && error_msg.length > 0 ? error_msg[0] : '' %>";
+
+      if (success_msg && success_msg.length > 0) {
+        Swal.fire({
+          icon: 'success',
+          title: 'Success',
+          text: success_msg,
+          confirmButtonColor: '#3085d6',
+        });
       }
 
-      const message = getQueryParam("message");
-      if (message) {
+      if (error_msg && error_msg.length > 0) {
         Swal.fire({
-          icon: "info", // you can change icon to 'error' or 'warning' if you want
-          title: "Notice",
-          text: decodeURIComponent(message),
+          icon: 'error',
+          title: 'Error',
+          text: error_msg,
+          confirmButtonColor: '#d33',
         });
       }
     </script>
