--- a/views/user/userSignup.ejs
+++ b/views/user/userSignup.ejs
@@ -27,20 +27,19 @@
     />
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/tempusStyle.css" />
+    <link rel="stylesheet" href="css/signupStyle.css" />
     <title>Tempus</title>
   </head>
 
   <body>
-    <!--HEADER-->
-    <%- include('../../views/partials/user/header')%>
-    <!--HEADER-->
-
     <div class="signup-container">
       <div class="container my-5">
         <div class="row justify-content-center">
           <div class="col-md-6 rounded-lg">
-            <div class="card shadow-lg p-4 rounded-4" style="border-radius: 20px;">
+            <div
+              class="card shadow-lg p-4 rounded-4"
+              style="border-radius: 20px"
+            >
               <h3 class="text-center mb-5">Sign up</h3>
               <form id="signupForm" action="/signup" method="POST" novalidate>
                 <!-- First Name -->
@@ -149,19 +148,7 @@
                   role="alert"
                   aria-live="assertive"
                   aria-atomic="true"
-                >
-                  <!-- <div class="d-flex">
-                <div id="toastBody" class="toast-body"> -->
-                  <!-- Error message will appear here -->
-                  <!-- </div>
-                <button
-                  type="button"
-                  class="btn-close btn-close-white me-2 m-auto"
-                  data-bs-dismiss="toast"
-                  aria-label="Close"
-                ></button>
-              </div> -->
-                </div>
+                ></div>
               </div>
 
               <div class="text-center my-3">
@@ -186,15 +173,17 @@
               >
                 Already have an account?<a href="/login"> Sign in here </a>
               </div>
+              <div
+                class="d-flex align-items-center justify-content-center mt-3"
+              >
+                <a href="/" class="text-decoration-none"> Tempus </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!--FOOTER-->
-    <%- include('../../views/partials/user/footer')%>
-    <!--FOOTER-->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/custom.js"></script>
@@ -205,20 +194,27 @@
     <script src="js/changeFrgtPswd.js"></script>
     <script src="js/templateJS.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script>
-      // Function to get URL parameters
-      function getQueryParam(param) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(param);
+      const success_msg =
+        "<%= success_msg && success_msg.length > 0 ? success_msg[0] : '' %>";
+      const error_msg =
+        "<%= error_msg && error_msg.length > 0 ? error_msg[0] : '' %>";
+
+      if (success_msg && success_msg.length > 0) {
+        Swal.fire({
+          icon: 'success',
+          title: 'Success',
+          text: success_msg,
+          confirmButtonColor: '#3085d6',
+        });
       }
 
-      const message = getQueryParam("message");
-      if (message) {
+      if (error_msg && error_msg.length > 0) {
         Swal.fire({
-          icon: "info", // you can change icon to 'error' or 'warning' if you want
-          title: "Notice",
-          text: decodeURIComponent(message),
+          icon: 'error',
+          title: 'Error',
+          text: error_msg,
+          confirmButtonColor: '#d33',
         });
       }
     </script>
