week14 still working on cart

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -71,6 +71,7 @@
           <form class="col-md-12" method="post">
             <div class="site-blocks-table">
               <table class="table">
+                <%if(cartItems){%>
                 <thead>
                   <tr>
                     <th class="product-thumbnail">Image</th>
@@ -81,118 +82,104 @@
                     <th class="product-remove">Remove</th>
                   </tr>
                 </thead>
+                <%}%>
                 <tbody>
+                  <%if(cartItems){%>
+                  <%cartItems.items.forEach((item)=>{%>
                   <tr>
                     <td class="product-thumbnail">
                       <img
-                        src="images/product-1.png"
+                        src="<%=item.variantDetails.variantImages[0]%>"
                         alt="Image"
                         class="img-fluid"
                       />
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">Product 1</h2>
+                      <h2 class="h5 text-black"><%=item.productName%></h2>
                     </td>
-                    <td>$49.00</td>
+                    <td>₹<%=item.price%></td>
                     <td>
                       <div
                         class="input-group mb-3 d-flex align-items-center quantity-container"
                         style="max-width: 120px"
                       >
                         <div class="input-group-prepend">
-                          <button
+                          <a
+                            href="/cart/decreaseQty?userId=<%=cartItems.userId%>&productId=<%=item.productId%>&variantId=<%=item.variantId%>"
                             class="btn btn-outline-black decrease"
-                            type="button"
                           >
                             &minus;
-                          </button>
+                          </a>
                         </div>
                         <input
                           type="text"
                           class="form-control text-center quantity-amount"
-                          value="1"
+                          value="<%=item.quantity%>"
                           placeholder=""
                           aria-label="Example text with button addon"
                           aria-describedby="button-addon1"
                         />
                         <div class="input-group-append">
-                          <button
+                          <a
+                            href="/cart/increaseQty?userId=<%=cartItems.userId%>&productId=<%=item.productId%>&variantId=<%=item.variantId%>"
                             class="btn btn-outline-black increase"
-                            type="button"
                           >
                             &plus;
-                          </button>
+                          </a>
                         </div>
                       </div>
                     </td>
-                    <td>$49.00</td>
-                    <td><a href="#" class="btn btn-black btn-sm">X</a></td>
+                    <td>₹<%=item.total%></td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn btn-black btn-sm removeFromCart"
+                        data-user-id="<%=cartItems.userId%>"
+                        data-product-id="<%=item.productId%>"
+                        data-variant-id="<%=item.variantId%>"
+                        data-quantity="<%=item.quantity%>"
+                      >
+                        X
+                      </button>
+                    </td>
                   </tr>
 
-                  <tr>
-                    <td class="product-thumbnail">
-                      <img
-                        src="images/product-2.png"
-                        alt="Image"
-                        class="img-fluid"
-                      />
-                    </td>
-                    <td class="product-name">
-                      <h2 class="h5 text-black">Product 2</h2>
-                    </td>
-                    <td>$49.00</td>
-                    <td>
-                      <div
-                        class="input-group mb-3 d-flex align-items-center quantity-container"
-                        style="max-width: 120px"
+                  <%})%>
+                  <%}else{%>
+                  <div
+                    class="d-flex flex-column align-items-center justify-content-center"
+                  >
+                    <h3>No products in cart..!</h3>
+                    <div class="mt-5">
+                      <a
+                        href="/collections"
+                        class="btn btn-outline-black btn-lg"
                       >
-                        <div class="input-group-prepend">
-                          <button
-                            class="btn btn-outline-black decrease"
-                            type="button"
-                          >
-                            &minus;
-                          </button>
-                        </div>
-                        <input
-                          type="text"
-                          class="form-control text-center quantity-amount"
-                          value="1"
-                          placeholder=""
-                          aria-label="Example text with button addon"
-                          aria-describedby="button-addon1"
-                        />
-                        <div class="input-group-append">
-                          <button
-                            class="btn btn-outline-black increase"
-                            type="button"
-                          >
-                            &plus;
-                          </button>
-                        </div>
-                      </div>
-                    </td>
-                    <td>$49.00</td>
-                    <td><a href="#" class="btn btn-black btn-sm">X</a></td>
-                  </tr>
+                        Shop Now
+                      </a>
+                    </div>
+                  </div>
+                  <%}%>
                 </tbody>
               </table>
             </div>
           </form>
         </div>
 
+        <%if(cartItems){%>
+        <% let sum = cartItems.items.reduce((acc, curr) => acc + curr.total, 0);
+        %>
+
         <div class="row">
           <div class="col-md-6">
             <div class="row mb-5">
-              <div class="col-md-6 mb-3 mb-md-0">
-                <button class="btn btn-black btn-sm btn-block">
-                  Update Cart
-                </button>
-              </div>
               <div class="col-md-6">
-                <button class="btn btn-outline-black btn-sm btn-block">
+                <a
+                  href="/collections"
+                  class="btn btn-outline-black btn-sm btn-block"
+                >
                   Continue Shopping
-                </button>
+                </a>
               </div>
             </div>
             <div class="row">
@@ -226,7 +213,7 @@
                     <span class="text-black">Subtotal</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <strong class="text-black">₹<%=sum%></strong>
                   </div>
                 </div>
                 <div class="row mb-5">
@@ -234,7 +221,7 @@
                     <span class="text-black">Total</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <strong class="text-black">₹<%=sum%></strong>
                   </div>
                 </div>
 
@@ -252,6 +239,8 @@
             </div>
           </div>
         </div>
+
+        <%}%>
       </div>
     </div>
 
@@ -274,6 +263,7 @@
     <script src="/js/custom.js"></script>
     <script src="/js/templateJS.js"></script>
     <script src="/js3/picZoom.js"></script>
+    <script src="/js/removeFromCart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
       const success_msg =
