--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -188,6 +188,7 @@
                   id="addToCartButton"
                   data-product-id="<%=product._id%>"
                   data-variant-id="<%=variant._id%>"
+                  data-variant-price="<%=variant.offerPrice%>"
                   disabled
                   ><i class="fa-solid fa-bag-shopping"></i> Add to cart</a
                 >
