--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -761,7 +761,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="country"
+                            id="country1"
                             name="country"
                             required
                           />
@@ -777,7 +777,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="name"
+                            id="name1"
                             name="name"
                             required
                           />
@@ -793,7 +793,7 @@
                           <input
                             type="tel"
                             class="form-control"
-                            id="phoneNo"
+                            id="phoneNo1"
                             name="phoneNo"
                             required
                           />
@@ -809,7 +809,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="pincode"
+                            id="pincode1"
                             name="pincode"
                             pattern="\d{6}"
                             required
@@ -828,7 +828,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="addressLine"
+                            id="addressLine1"
                             name="addressLine"
                             required
                           />
@@ -844,7 +844,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="landmark"
+                            id="landmark1"
                             name="landmark"
                           />
                         </div>
@@ -855,7 +855,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="townCity"
+                            id="townCity1"
                             name="townCity"
                             required
                           />
@@ -871,7 +871,7 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="state"
+                            id="state1"
                             name="state"
                             required
                           />
@@ -887,7 +887,7 @@
                           <select
                             class="form-select"
                             name="addressType"
-                            id="addressType"
+                            id="addressType1"
                           >
                             <option value="home" selected>Home</option>
                             <option value="work">Work</option>
@@ -902,7 +902,7 @@
                               class="form-check-input"
                               type="checkbox"
                               name="isDefault"
-                              id="isDefault"
+                              id="isDefault1"
                               onclick="return confirm('Do you want to make this address as your default address?')"
                             />
                             <label class="form-check-label" for="isDefault"
