--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -173,7 +173,7 @@
                     />
                   </div>
                 </div>
-                <%if(checkQuantity == 0){%>
+                <%if(checkQuantity <= 0){%>
                 <a
                   href="#"
                   class="cart-btn text-decoration-none"
