--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -154,7 +154,7 @@
                   </tr>
 
                   <%})%>
-                  <%}else{%>
+                  <%}else if(!cartItems){%>
                   <div
                     class="d-flex flex-column align-items-center justify-content-center"
                   >
@@ -248,6 +248,8 @@
           </div>
         </div>
 
+        <%}else if(!cartItems){%>
+          <div></div>
         <%}%>
       </div>
     </div>
