--- a/views/user/thankYou.ejs
+++ b/views/user/thankYou.ejs
@@ -128,9 +128,9 @@
           </div>
 
           <div class="text-center mt-4">
-            <button class="btn btn-custom me-3" onclick="trackOrder()">
+            <a class="btn btn-custom me-3" href="/orders">
               <i class="fas fa-search me-2"></i>Track Order
-            </button>
+            </a>
             <a class="btn btn-outline-custom" href="/collections">
               <i class="fas fa-shopping-cart me-2"></i>Continue Shopping
             </a>
